# pixel64

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.claude/: settings.json
3dprinted/: .gitignore  baffle-mini.scad  baffle.scad  printing.md  render.sh
docs/: README.md  hardware-wiring.md  performance.md
docs/scenes/: README.md  bundle-format.md  device-runtime.md  inputs-and-binding.md  layers-and-compositing.md  preview-and-parity.md  shader-language.md  shader-vm.md  transport.md
firmware/: Cargo.toml  build.rs  memory.x  rust-toolchain.toml
firmware/.cargo/: config.toml
firmware/docs/: README.md  firmware.md  gotchas.md  hardware-wiring.md  hub75-pico-wiring.md  performance.md  pico-pinout.md  pico-port.md  wifi-onboarding.md
firmware/src/: bootsel.rs  display.rs  hub75.rs  improv.rs  lib.rs  net.rs  scene.rs  storage.rs
renderer/: Cargo.toml  README.md
renderer/src/: lib.rs  program.rs  vm.rs
web/: README.md
web/improv-test/: index.html
web/src/lib/scene/: builtins.ts
