[package]
edition      = "2024"
name         = "pixel64"
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "pixel64"
path = "./src/bin/main.rs"

[dependencies]
esp-hal = { version = "~1.1.0", features = ["esp32c6", "log-04", "unstable"] }

esp-rtos = { version = "0.3.0", features = ["embassy", "esp32c6", "log-04"] }

esp-bootloader-esp-idf = { version = "0.5.0", features = ["esp32c6", "log-04"] }
log                    = "0.4.27"

embassy-executor = { version = "0.10.0", features = ["log"] }
embassy-time     = { version = "0.5.0", features = ["log"] }
esp-println      = { version = "0.17.0", features = ["esp32c6", "log-04"] }

critical-section = "1.2.0"
static_cell      = "2.1.1"

# HUB75 LED matrix driver — DMA out via the ESP32-C6 PARL_IO peripheral, draws via embedded-graphics
esp-hub75         = { version = "0.11.0", features = ["esp32c6", "log"] }
embedded-graphics = "0.8.2"


# For fine tuning these settings, please refer to https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.dev]
# The default debug profile is too slow and too big for resource-constrained devices.
# Always build with some optimizations enabled.
opt-level = "s"

[profile.release]
codegen-units = 1     # LLVM can perform better optimizations using a single thread
debug         = 2     # prefer slower builds but better debugging experience
lto           = 'fat'
opt-level     = 's'
