[package]
edition      = "2024"
name         = "pixel64"
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "pixel64"
path = "./src/bin/main.rs"

# Target: Raspberry Pi Pico 2 W (RP2350A, ARM Cortex-M33) on embassy-rp.
# Dependency set + the full port plan live in docs/pico-port.md. The deps below are the *skeleton*
# set (USB-serial heartbeat); cyw43 / trouble-host / sequential-storage / embedded-graphics get
# added back as each module is ported — see the milestones in docs/pico-port.md.
[dependencies]
embassy-rp = { version = "0.10.0", features = [
    "rp235xa",              # Pico 2 W = RP2350A
    "time-driver",
    "critical-section-impl",
    "binary-info",          # emits the RP2350 boot image-def block + picotool metadata
    "unstable-pac",
] }
embassy-executor = { version = "0.10.0", features = ["platform-cortex-m", "executor-thread"] }
embassy-time     = "0.5.1"

# CYW43439 radio (Wi-Fi now, BLE at the spike), driven over PIO-emulated SPI. Firmware blobs are
# vendored in cyw43-firmware/. BLE via `new_with_bluetooth` gets enabled at the BLE-spike milestone.
cyw43     = "0.7.0"
cyw43-pio = "0.10.0"

# USB-serial logging: one USB cable carries both flashing (BOOTSEL UF2) and `log` output — no
# debug probe. Keeps the `log::info!` API the ESP firmware used (no defmt). See docs/pico-port.md.
embassy-usb        = "0.6.0"
embassy-usb-logger = "0.6.0"
log                = "0.4"

cortex-m-rt = "0.7"
static_cell = "2.1"

[profile.dev]
# Some optimization even in dev: the default debug profile is too slow/big for the MCU.
opt-level = "s"

[profile.release]
codegen-units = 1
debug         = 2
lto           = "fat"
opt-level     = "s"
